--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,40 +2,38 @@ build: false
 version: "{branch}-{build}"
 
 image:
-  - Visual Studio 2015
   - Visual Studio 2017
+  - Visual Studio 2019
 
 environment:
   PYTHON_PATH: C:\Python27
 
   matrix:
-    - STD: c++14
-      BOOST_VER: 1_60_0
-    - STD: c++14
-      BOOST_VER: 1_67_0
-    - STD: c++17
-      BOOST_VER: 1_67_0
+    - BOOST_VER: 1_67_0
+    - BOOST_VER: 1_69_0
+    - BOOST_VER: 1_71_0
 
 matrix:
   exclude:
-    - image: Visual Studio 2015
-      STD: c++17
     - image: Visual Studio 2017
-      BOOST_VER: 1_60_0
-
+      BOOST_VER: 1_71_0
+    - image: Visual Studio 2019
+      BOOST_VER: 1_67_0
+    - image: Visual Studio 2019
+      BOOST_VER: 1_69_0
 for:
-  - matrix:
-      only:
-        - image: Visual Studio 2015
-    environment:
-      VS: C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat
-      VCBIN_VER: 14.0
   - matrix:
       only:
         - image: Visual Studio 2017
     environment:
       VS: C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat
       VCBIN_VER: 14.1
+  - matrix:
+      only:
+        - image: Visual Studio 2019
+    environment:
+      VS: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
+      VCBIN_VER: 14.2
 
 cache:
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
@@ -51,6 +49,6 @@ test_script:
   - set BOOST_INCLUDEDIR=C:\Libraries\boost_%BOOST_VER%
   - set BOOST_LIBRARYDIR=C:\Libraries\boost_%BOOST_VER%\lib32-msvc-%VCBIN_VER%
   - set CPPFLAGS=/WX
-  - 9k build --vendorize --backend=ninja --std=%STD%
+  - 9k build --vendorize --backend=ninja
   - cd build
   - ninja test
