Update commands to build/deploy docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ markdown_extensions:
   - toc:
       permalink: §
 
-pages:
+nav:
   - Home: index.md
   - Installation: install.md
   - User Guide:
