--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ addons:
   apt:
     sources: &sources
       - ubuntu-toolchain-r-test
+      - llvm-toolchain-xenial-6.0
+      - llvm-toolchain-xenial-7
+      - llvm-toolchain-xenial-8
+      - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
+        key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
     packages: &packages
       # Test 1.58 specifically because it has very strict rules for
       # Boost.Variant. This is the default in Xenial, but if this changes, we
@@ -37,9 +42,7 @@ matrix:
       env: COMPILER=clang++-6.0
       addons:
         apt:
-          sources:
-            - *sources
-            - llvm-toolchain-xenial-6.0
+          sources: *sources
           packages:
             - *packages
             - clang-6.0
@@ -48,9 +51,7 @@ matrix:
       env: COMPILER=clang++-7
       addons:
         apt:
-          sources:
-            - *sources
-            - llvm-toolchain-xenial-7
+          sources: *sources
           packages:
             - *packages
             - clang-7
@@ -59,9 +60,7 @@ matrix:
       env: COMPILER=clang++-8
       addons:
         apt:
-          sources:
-            - *sources
-            - llvm-toolchain-xenial-8
+          sources: *sources
           packages:
             - *packages
             - clang-8
@@ -70,10 +69,7 @@ matrix:
       env: COMPILER=clang++-9
       addons: &clang-9
         apt:
-          sources: &clang-9-sources
-            - *sources
-            - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+          sources: *sources
           packages:
             - *packages
             - clang-9
@@ -127,7 +123,7 @@ matrix:
       env: BOOST_VER=1.67 COMPILER=clang++-9
       addons:
         apt:
-          sources: *clang-9-sources
+          sources: *sources
           packages:
             - libstdc++-7-dev
             - ninja-build
